--- a/Clarinet.toml
+++ b/Clarinet.toml
@@ -3,13 +3,24 @@ name = "crash-punks-v2"
 authors = []
 description = ""
 telemetry = false
-requirements = []
 boot_contracts = ["pox", "costs-v2", "bns"]
+
+[[project.requirements]]
+contract_id = ".nft-trait"
+
+[[project.requirements]]
+contract_id = ".ft-trait"
 
 [project.cache_location]
 path = ".requirements"
+[contracts.commision-trait]
+path = "contracts/commision-trait.clar"
+
 [contracts.digital-avatar]
 path = "contracts/digital-avatar.clar"
+
+[contracts.ft-trait]
+path = "contracts/ft-trait.clar"
 
 [contracts.hardware-top-example]
 path = "contracts/hardware-top-example.clar"
@@ -17,17 +28,20 @@ path = "contracts/hardware-top-example.clar"
 [contracts.hypercard]
 path = "contracts/hypercard.clar"
 
+[contracts.nft-trait]
+path = "contracts/nft-trait.clar"
+
+[contracts.operable]
+path = "contracts/operable.clar"
+
+[contracts.punks]
+path = "contracts/punks.clar"
+
 [contracts.snow]
 path = "contracts/snow.clar"
 
 [contracts.staking]
 path = "contracts/staking.clar"
-
-[contracts.sip-010-trait]
-path = "contracts/sip-010-trait.clar"
-
-[contracts.sip-090-trait]
-path = "contracts/sip-090-trait-nft.clar"
 
 [repl]
 costs_version = 2
